--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "concurrently": "^4.1.1",
     "express": "^4.17.1",
     "mongoose": "^5.6.1",
-    "react-bootstrap": "^1.0.0-beta.16"
+    "react-bootstrap": "^1.0.0-beta.16",
+    "reactstrap": "^8.4.1"
   },
   "engines": {
     "node": "10.x"
