--- a/package.json
+++ b/package.json
@@ -4,12 +4,9 @@
   "description": "# Setup",
   "main": "server.js",
   "dependencies": {
-    "bootstrap": "^4.4.1",
     "concurrently": "^4.1.2",
     "express": "^4.17.1",
-    "mongoose": "^5.8.11",
-    "react-bootstrap": "^1.0.0-beta.16",
-    "reactstrap": "^8.4.1"
+    "mongoose": "^5.8.11"
   },
   "engines": {
     "node": "10.x"
